--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -16,8 +16,8 @@
     <div class="width">
         <!-- footer links -->
         <div class="footer-links">
-            <a href="/vilkaar-og-betingelser">Vilkår</a>
-            <a href="/policy">Policy</a>
+            <a href="/vilkaar/">Vilkår</a>
+            <a href="/policy/">Policy</a>
         </div>
         <hr style="background: rgba(255, 255, 255, 0.664);">
         <!-- footer bottom -->
