--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -49,7 +49,7 @@
       <div class="services-cards">
          {% for product in products %}
          <div class="service" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
-            <img src="{{product.image.url}}" alt="" class="service-image">
+            <img src="{{product.image1.url}}" alt="" class="service-image">
             <div class="reviews">
                {% if product.get_rating %}
                <p><i class="fa-solid fa-star"></i><p id="reviewsAvrg"></p></p><span>({{product.reviews.all.count}})</span>
@@ -108,6 +108,9 @@
       avrg = parseInt(avrg) / parseInt('{{product.reviews.all.count}}')
       
       text.innerHTML = Math.trunc(avrg)
+
+   // Visitors
+    console.log('Antall visninger {{ num_visits }}')
    }
 
 
