--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -35,7 +35,7 @@
         <a href="/om-oss/">Om oss</a>
         <a href="/blogg/">Blogg</a>
         <a href="/alle-tjenester/">Alle tjenester</a>
-        <a class="nav_order_btn" href="">For bedrifter</a>
+        <a class="nav_order_btn" href="/for-bedrifter/">For bedrifter</a>
         &nbsp;
         <hr style="background: rgba(150,150,150,0.05);">
 
