--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -29,7 +29,7 @@
             <h1>Verdier</h1>
             <p>
                 Våres verdier går stort sett på kvalitet og respekt. Vi prøver så hardt vi kan til å forbedre listen av tjenestene våres, derfor er det supert viktig for oss at du er med å bidrar.
-                Det viktigste for oss er å gjøre Lillehammer Tjenester veldig enkelt og bruke
+                Det viktigste for oss er å gjøre Lillehammer Tjenester veldig enkelt å bruke.
             </p>
         </div>
 
@@ -43,7 +43,7 @@
                 <br>
                 <br>
                 Vi vil alltid være tilgjengelige for å hjelpe deg og svare på eventuelle spørsmål du måtte ha.
-                Vårt mål er å bidra til å gjøre Lillehammer til et enda bedre sted å bo og drive virksomhet ved å gjøre det enkelt å finne de rette tjenestene. Vi ser frem til å hjelpe deg med å finne det du leter etter og å bidra til å nå dine mål
+                Vårt mål er å bidra til å gjøre Lillehammer til et enda bedre sted å bo og drive virksomhet ved å gjøre det enkelt å finne de rette tjenestene. Vi ser frem til å hjelpe deg med å finne det du leter etter og å bidra til å nå dine mål.
             </p>
         </div>
 
@@ -61,7 +61,7 @@
             <h1>Bruk av tjenesten</h1>
             <p>
                 Vi forstår at det kan være en utfordring å finne de rette tjenestene for dine behov, derfor har vi gjort det enkelt for deg ved å samle alle tjenestene på ett sted. 
-                Tjenesten kommer alltid til å forbli gratis å bruke
+                Tjenesten kommer alltid til å forbli gratis å bruke.
                 <div class="video" style="width: 100%; height: 180px; background: lightgrey; margin-top: 10px; border-radius: 4px;">video her</div>
             </p>
         </div>
