--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -20,7 +20,7 @@
     <div class="services">
         {% for product in products %}
         <div class="service" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
-            <img src="{{product.image.url}}" alt="" class="service-image">
+            <img src="{{product.image1.url}}" alt="" class="service-image">
             <div class="reviews">
                 {% if product.get_rating %}
                 <p><i class="fa-solid fa-star"></i><p id="reviewsAvrg"></p></p><span>({{product.reviews.all.count}})</span>
