--- a/static/scss/page/policy.scss
+++ b/static/scss/page/policy.scss
@@ -21,7 +21,7 @@ $txt: #183b56;
   }
 
 .page{
-    #aboutQ{
+    #policyQ{
         position: absolute;
         top: 66px;
         left: 0;
@@ -40,7 +40,7 @@ $txt: #183b56;
           box-shadow: 0 0 4px rgba(5,5,5,0.12);
         }
     }
-    .about-us{
+    .policy{
         position: relative;
         padding-top: 155px;
         padding-bottom: 19px;
