--- a/apps/core/templates/pages/business/be-partner.html
+++ b/apps/core/templates/pages/business/be-partner.html
@@ -15,7 +15,7 @@
             <div class="text">
                 <h1>Kort info</h1>
                 <p>
-                  Å bli partner er helt gratis. Du samtykker også med våres <a href="/vilkaar/">vilkår</a> når du skal sende inn skjema.
+                  Å bli partner med Lillehammer Tjenester er helt gratis, og tilbudet gjelder kunn bedrifter. Du samtykker også med våres <a href="/vilkaar/">vilkår</a> når du skal sende inn skjema.
                 </p>
             </div>
             <hr style="margin-block: 38px;">
