--- a/apps/core/templates/pages/business/business.html
+++ b/apps/core/templates/pages/business/business.html
@@ -20,7 +20,7 @@
                     <br>
                     <br>
                     Det er maks 3 tjenester per bedrift, og bedriften må fylle inn et skjema med all info som trengs. 
-                    Å bruke tjensten som bedrift er gratis, men det finnes ekstra tilbud som bedriften kan velge selv om de vil benytte. Disse tilbudene kommer snart.
+                    Å bruke tjensten som bedrift er helt gratis, men det finnes ekstra tilbud som bedriften kan velge selv om de vil benytte. Disse tilbudene kommer snart.
                 </p>
             </div>
 
@@ -42,7 +42,7 @@
                     Bedrifter bør bli partner med Lillehammer Tjenester for flere årsaker. 
                     <br>
                     <br>
-                    For det første, kan vi tilby dere en bred plattform for å markedsføre sine tjenester og produkter til et stort publikum. Vi har et stort nettverk av kunder og kan hjelpe dere med å nå deres målgrupper.
+                    For det første, kan vi tilby dere en bred plattform for å markedsføre deres tjenester og produkter til et stort publikum. Vi har et stort nettverk av kunder og kan hjelpe dere med å nå deres målgrupper. Bedrifter som er partnere vil også mota månedlig e-post med antall besøkere den måned det er snakk om.
                     <br>
                     <br>
                     For det andre, vil vår profesjonelle tjenester hjelpe dere å bygge et godt omdømme og øke deres merkevarebevissthet. Vår dedikasjon til kvalitet og profesjonalisme vil hjelpe dere å skape en positiv oppfatning av virksomhet deres i markedet.
