--- a/apps/core/templates/pages/legal/policy.html
+++ b/apps/core/templates/pages/legal/policy.html
@@ -20,7 +20,7 @@
                 <br>
                 <br>
                 Vi samler inn personlig informasjon som navn, kontaktinformasjon og bedriftsinformasjon fra våre brukere og bedriftspartnere når de registrerer seg på vår nettside eller bruker våre tjenester. 
-                Vi kan også samle inn informasjon om brukernes aktivitet på nettsiden, som for eksempel søkehistorikk og klikk. Vi samler ikke inn informasjon fra privatpersoner enda.
+                Vi kan også samle inn informasjon om brukernes aktivitet på nettsiden, som for eksempel søkehistorikk og klikk. Vi samler ikke inn privatinformasjon fra privatpersoner enda.
                 Formålet med å samle inn denne informasjonen er å kunne tilby personaliserte tjenester, forbedre våre tjenester og øke sikkerheten på vår nettside.
                 <br>
                 <br>
