--- a/apps/core/templates/pages/legal/vilkår.html
+++ b/apps/core/templates/pages/legal/vilkår.html
@@ -43,32 +43,31 @@
                 <br>
                 <br>
                 Vi forbeholder oss retten til å avslå eller fjerne registreringer av bedrifter som bryter disse vilkårene og betingelsene.
+                <br>
+                <br>
                 Du er ansvarlig for å holde informasjonen om din bedrift oppdatert og korrekt på nettstedet. Hvis du oppdaterer informasjonen deres, kan dere sende oss en mail med det nye riktige informasjonen.
                 <br>
                 <br>
                 Vi tar ikke ansvar for eventuelle feil eller manglende informasjon som følge av at du ikke holder informasjonen din oppdatert.
-                Disse vilkårene og betingelsene kan endres. Dette vil du som bedrift bli varslet med engang. Ved å fortsette å være registrert på nettstedet etter endringer i vilkårene og betingelsene, godtar du å være bundet av de nye vilkårene og betingelsene.
+                Disse vilkårene og betingelsene kan endres. Dette vil du som bedrift bli varslet om med engang. Ved å fortsette å være registrert på nettstedet etter endringer i vilkårene og betingelsene, godtar du å være bundet av de nye vilkårene og betingelsene.
                 <br>
                 <br>
             </p>
-                <h2>Oppsumering</h2>
+                <h2>Oppsummert for bedrifter</h2>
                 <p>
                     Bedrifter må godkjenne våre vilkår og betingelser for å bli partner med oss.
                     <br>
                     <br>
-                    Bedrifter må gi oss tilgang til deres profilinformasjon for å kunne vise dette på vår nettside.
+                    Bedrifter må gi oss tilgang til deres informasjon for å kunne vise dette på vår nettside.
                     <br>
                     <br>
-                    Bedrifter må holde seg oppdatert på informasjonen som vises på vår nettside for å sikre at det er korrekt.
+                    Bedrifter må holde seg oppdatert på informasjonen som vises på vår nettside for å sikre at det er korrekt. Dette kan gjøres ved å sende oss en e-post.
                     <br>
                     <br>
                     Bedrifter må gi oss tilbakemelding dersom det er endringer i deres tjenester eller kontaktinformasjon.
                     <br>
                     <br>
                     Bedrifter er ansvarlige for å overholde alle relevante lover og reguleringer i forbindelse med deres tjenester.
-                    <br>
-                    <br>
-                    Bedrifter er ansvarlige for egen markedsføring og reklame på vår nettside.
                 <br>
                 <br>
                 Bedrifter samtykker i at vi kan fjerne deres profil fra nettsiden dersom de bryter våre vilkår og betingelser.
