--- a/apps/store/templates/core/category.html
+++ b/apps/store/templates/core/category.html
@@ -21,7 +21,7 @@
        <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
    </form>
  </div>
- <p class="category-q" id="categoryQ">Du ser nå på kategorien <strong>{{category.name}}</strong></p>
+ <p class="category-q" id="categoryQ">Kategorien <strong>{{category.name}}</strong></p>
 <div class="page">
     <div class="categories" style="padding-inline: 6px;">
         {% for product in product %}
