--- a/apps/blog/templates/core/blog.html
+++ b/apps/blog/templates/core/blog.html
@@ -4,8 +4,10 @@
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/store/blog/blog.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
+<script rel="stylesheet" src="{% static '/js/blog.js' %}" type="text/javascript"></script>
 
 <div class="page">
+   <p class="blog-q" id="blogQ">Blogg</p>
 
  <div class="blog-posts">
    {% for post in post %}
@@ -21,7 +23,7 @@
          <div class="blog-image-text">
             <h1>{{ post.title }}</h1>
             <p>{{ post.short_text }}</p>
-            <p>Skrevet av <strong>{{ post.author }}</strong> {{ post.created_at | date:"d F Y" }}</p>
+            <p>Skrevet av {{ post.author }} {{ post.created_at | date:"d F Y" }}</p>
          </div>
       </div>
    </div>
