--- a/static/scss/store/blog/blog.scss
+++ b/static/scss/store/blog/blog.scss
@@ -1,12 +1,52 @@
-// STANDARD PHONE
+$black: #1F1F1F;
+$white: rgb(246,246,246);
+$primBtn: #06c484;
+$txt: #183b56;
 
+#footer{
+    border-top: 1px solid rgba(0,0,0,0.1);
+  }
+  #mobileNav{
+    position: absolute;
+    background: white;
+    &::before{
+        display: none;
+    }
+    &.sticky{
+        position: fixed;
+        &::before{
+            display: none;
+        }
+    }
+  }
+
+
+.page{
+  #blogQ{
+    position: absolute;
+    top: 66px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: $primBtn;
+    color: $white;
+    font-size: 14px;
+    padding: 10px 18px;
+    font-weight: 500;
+    z-index: 10000;
+    text-align: left;
+    &.sticky{
+      position: fixed;
+      top: 66px;
+      box-shadow: 0 0 4px rgba(5,5,5,0.12);
+    }
+}
 .blog-posts{
-  background: white;
-  width: 100%;
-  height: auto;
-  margin-top: -15px;
-  margin-bottom: 0;
-  padding: 25px;
+  position: relative;
+  padding-top: 155px;
+  padding-bottom: 19px;
+  margin-bottom: 19px;
+  padding-inline: 18px;
   .post{
     border-bottom: 1px solid lightgray;
     &:last-child{
@@ -14,25 +54,21 @@
     }
   }
   .blog-card{
-    margin-block: 35px;
+    margin: 35px auto;
+    &:first-child{
+      margin-top: 0;
+    }
   }
   .blog-image{
     position: relative;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    border-bottom-left-radius: 6px;
     width: 100%;
     max-width: 390px;
     img{
       box-shadow: 0 0 3px rgba(0, 0, 0, 0.164);
       width: 100%;
+      border-radius: 4px;
       height: auto;
-      border-top-left-radius: 25px;
-      border-top-right-radius: 25px;
-      border-bottom-right-radius: 25px;
-      border-bottom-left-radius: 6px;
-      filter: brightness(90%);
+      filter: brightness(88%);
       margin: 15px auto;
     }
   }
@@ -52,27 +88,14 @@
       transform: translateX(20px);
       font-size: 20px;
       font-weight: 600;
+      color: $txt;
     }
     p{
-      transform: translateX(20px);
-      font-size: 15.3px;
-      letter-spacing: 0.2px;
-      opacity: 0.8;
-      box-sizing: border-box;
-      display: block;
-      font-family: Inter, sans-serif;
-      font-size: 15.5px;
-      font-weight: 400;
-      height: auto;
-      line-height: 27px;
-      width: auto;
-      padding-right: 10px;
-      &:nth-child(3){
-        font-size: 13px;
-        transform: translateY(-12px) translateX(20px);
-      }
+      font-size: 15px;
+      color: $txt;
     }
   }
+}
 }
 // desktop
 @media only screen and (min-device-width: 1145px) {
